--- a/index.html
+++ b/index.html
@@ -1,127 +1,134 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>forsafety</title>
-    <style>
-        :root{
-            --accent:#0d6efd;
-            --bg:#f7f9fc;
-            --card:#ffffff;
-            --text:#222;
-        }
-        *{box-sizing:border-box}
-        body{
-            margin:0;
-            font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-            background:var(--bg);
-            color:var(--text);
-            line-height:1.5;
-        }
-        header{
-            background:linear-gradient(90deg,var(--accent),#0b5ed7);
-            color:white;
-            padding:40px 20px;
-            text-align:center;
-        }
-        header h1{
-            margin:0;
-            font-size:2.2rem;
-            letter-spacing:1px;
-        }
-        main{
-            max-width:900px;
-            margin:28px auto;
-            padding:20px;
-        }
-        .card{
-            background:var(--card);
-            border-radius:12px;
-            padding:22px;
-            box-shadow:0 6px 18px rgba(16,24,40,0.08);
-            margin-bottom:18px;
-            text-align:right;
-        }
-        .features{
-            display:grid;
-            grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
-            gap:12px;
-        }
-        .feature{
-            padding:14px;
-            border-radius:10px;
-            background:linear-gradient(180deg,#fff,#fbfdff);
-            border:1px solid rgba(13,110,253,0.06);
-            text-align:right;
-        }
-        .feature h3{margin:0 0 6px 0;font-size:1.05rem;color:var(--accent)}
-        footer{
-            text-align:center;
-            padding:18px 10px;
-            color:#fff;
-            background:var(--accent);
-            margin-top:20px;
-        }
-        .social a{
-            color:white;
-            margin:0 8px;
-            text-decoration:none;
-            font-weight:600;
-        }
-        @media (max-width:480px){
-            header h1{font-size:1.6rem}
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>forsafety — خدمات فحص وتقييم السلامة الغذائية</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#f8f9fa;
+      --card:#ffffff;
+      --text:#222;
+      --muted:#667085;
+      --brand:#1b4965;
+      --accent:#2f9e44;
+      --accent-2:#e9f7ef;
+      --shadow:0 10px 30px rgba(16,24,40,.08);
+      --hero-img:url('https://images.unsplash.com/photo-1544025162-d76694265947?q=80&w=1600&auto=format&fit=crop');
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:"Cairo",system-ui,-apple-system,Segoe UI,Roboto,Arial;line-height:1.7}
+    a{color:var(--brand);text-decoration:none}
+    .container{max-width:1100px;margin:0 auto;padding:0 18px}
+    .hero{position:relative;background:linear-gradient(180deg,rgba(0,0,0,.55),rgba(0,0,0,.35)),var(--hero-img) center/cover no-repeat;color:#fff;}
+    .hero-inner{padding:70px 0 90px;text-align:center;}
+    .logo{font-weight:700;letter-spacing:.5px;font-size:18px;opacity:.95}
+    .hero h1{margin:18px 0 10px;font-size:clamp(26px,3.2vw,40px);font-weight:700;}
+    .hero p{margin:0 auto;max-width:720px;color:#eef1f4;font-size:clamp(14px,2.2vw,18px);}
+    section{padding:34px 0}
+    .card{background:var(--card);border-radius:14px;box-shadow:var(--shadow);padding:22px;}
+    h2.section-title{margin:0 0 14px;color:var(--brand);font-size:clamp(20px,2.6vw,28px);}
+    .lead{color:var(--muted);margin:6px 0 0}
+    .goals{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:14px;margin-top:10px}
+    .goal{background:#fff;border:1px solid #eef2f6;border-radius:12px;padding:14px 16px;}
+    .goal::before{content:"✔";display:inline-grid;place-items:center;width:24px;height:24px;border-radius:50%;background:var(--accent-2);color:var(--accent);font-weight:700;margin-left:8px;}
+    .plans{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:14px}
+    .plan{background:#fff;border:1px solid #eef2f6;border-radius:14px;box-shadow:var(--shadow);overflow:hidden;display:flex;flex-direction:column}
+    .plan header{padding:18px 18px 10px;background:linear-gradient(180deg,#fff,#f7fbff);border-bottom:1px solid #eef2f6}
+    .plan h3{margin:0;color:var(--brand);font-size:20px}
+    .meta{color:#6b7280;font-size:14px;margin-top:6px}
+    .price{padding:14px 18px;font-weight:700;font-size:24px}
+    .features{padding:0 18px 6px;margin:0;list-style:none}
+    .features li{padding:8px 0;border-bottom:1px dashed #ecedf0;color:#384250}
+    .features li:last-child{border-bottom:0}
+    .features li.ok::before{content:"✓";color:var(--accent);font-weight:700;margin-left:8px}
+    .features li.no::before{content:"✕";color:#d92d20;font-weight:700;margin-left:8px}
+    .plan .actions{padding:16px 18px 20px;margin-top:auto}
+    .btn{display:inline-block;padding:10px 14px;border-radius:10px;font-weight:700;background:var(--accent);color:#fff;text-align:center}
+    .btn:hover{filter:brightness(.95)}
+    footer{padding:28px 0;text-align:center;background:#fff;border-top:1px solid #eceff3;margin-top:28px}
+    .muted{color:#98a2b3}
+    @media (max-width:520px){.hero-inner{padding:56px 0 74px}}
+  </style>
 </head>
 <body>
-    <header>
-        <h1>forsafety</h1>
-    </header>
-
-    <main>
-        <section class="card">
-            <p style="margin:0 0 8px 0; font-size:1.05rem;"><strong>منصة تدعم الامتثال وتساعد المؤسسات على تحسين ممارسات السلامة الغذائية.</strong></p>
-            <p style="margin:0;color:#555">عرض سريع لأهم أهدافنا — مصمم لصفحة تجريبية واحدة. يمكن توسيع الموقع لاحقًا بإضافة صفحات وخيارات تواصل ونماذج.</p>
-        </section>
-
-        <section class="card features">
-            <div class="feature">
-                <h3>تدعم الامتثال</h3>
-                <p style="margin:0;color:#444">نظام يساعدك تتبع معايير السلامة بسهولة.</p>
-            </div>
-            <div class="feature">
-                <h3>تقلل المخالفات الحكومية</h3>
-                <p style="margin:0;color:#444">تطبيق ممارسات تقلل فرص وقوع مخالفات خلال التفتيش.</p>
-            </div>
-            <div class="feature">
-                <h3>تحسين رضا العملاء</h3>
-                <p style="margin:0;color:#444">خدمات ترفع جودة المنتج وتجربة العميل.</p>
-            </div>
-            <div class="feature">
-                <h3>تقلل هدر الطعام</h3>
-                <p style="margin:0;color:#444">إرشادات للتخزين تقلل من تلف المواد الغذائية وهدرها.</p>
-            </div>
-        </section>
-
-        <section class="card" style="text-align:right;">
-            <p style="margin:0 0 10px 0"><strong>تواصل معنا</strong></p>
-            <p style="margin:0;color:#555">يمكنك تعديل روابط السوشال والاتصال داخل الكود:</p>
-            <ul style="margin:8px 0 0 0; padding-right:18px; color:#444">
-                <li>Instagram: ضع رابطك بدلاً من <code>#</code></li>
-                <li>Twitter: ضع رابطك بدلاً من <code>#</code></li>
-                <li>LinkedIn: ضع رابطك بدلاً من <code>#</code></li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <div class="social" style="margin-bottom:8px;">
-            <a href="#" target="_blank">Instagram</a>
-            <a href="#" target="_blank">Twitter</a>
-            <a href="#" target="_blank">LinkedIn</a>
+  <header class="hero">
+    <div class="container hero-inner">
+      <div class="logo">forsafety</div>
+      <h1>خدمات فحص وتقييم السلامة الغذائية</h1>
+      <p>نقدّم خدمات متخصصة في تقييم جودة وسلامة المطاعم والمنشآت الغذائية وفق أفضل الممارسات والمعايير، لضمان تقديم منتجات آمنة ورفيعة الجودة للعملاء.</p>
+    </div>
+  </header>
+  <main>
+    <section>
+      <div class="container">
+        <div class="card">
+          <h2 class="section-title">لماذا forsafety؟</h2>
+          <p class="lead">نرافقك خطوة بخطوة لتحسين جميع جوانب السلامة الغذائية في منشأتك، لضمان بيئة صحية ومستوى تشغيل أعلى، وتجربة طعام آمنة وموثوقة.</p>
         </div>
-        <div style="font-size:0.95rem;">&copy; 2025 forsafety</div>
-    </footer>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <h2 class="section-title">نهدف إلى:</h2>
+        <div class="goals">
+          <div class="goal">رفع مستوى الثقة بين منشأتك وعملائك</div>
+          <div class="goal">تحسين السمعة وتعزيز التنافسية في السوق</div>
+          <div class="goal">تجنّب المخالفات والالتزام بالإشرافات الرقابية</div>
+          <div class="goal">كشف الأخطاء وتطوير الأداء قبل حدوث أي مشاكل</div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <h2 class="section-title">باقات التقييم والفحص</h2>
+        <div class="plans">
+          <article class="plan">
+            <header><h3>الباقة التأسيسية</h3></header>
+            <div class="price">300 دينار</div>
+            <ul class="features">
+              <li class="ok">مدة 3 أسابيع</li>
+              <li class="ok">2–3 زيارات أسبوعية</li>
+              <li class="ok">3–2 مسحات ATP أسبوعياً</li>
+              <li class="ok">تقييم الممارسات والإجراءات</li>
+              <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
+              <li class="no">التقارير الشهرية التفصيلية</li>
+            </ul>
+            <div class="actions"><a href="#" class="btn">التفاصيل</a></div>
+          </article>
+          <article class="plan">
+            <header><h3>الباقة النصف السنوية</h3></header>
+            <div class="price">1500 دينار</div>
+            <ul class="features">
+              <li class="ok">مدة 6 أشهر</li>
+              <li class="ok">2–3 زيارات أسبوعية</li>
+              <li class="ok">3–2 مسحات ATP أسبوعياً</li>
+              <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
+              <li class="ok">التقارير الشهرية التفصيلية</li>
+            </ul>
+            <div class="actions"><a href="#" class="btn">التفاصيل</a></div>
+          </article>
+          <article class="plan">
+            <header><h3>الباقة السنوية</h3></header>
+            <div class="price">3000 دينار</div>
+            <ul class="features">
+              <li class="ok">مدة 12 شهر</li>
+              <li class="ok">2–3 زيارات أسبوعية</li>
+              <li class="ok">3–2 مسحات ATP أسبوعياً</li>
+              <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
+              <li class="ok">التقارير الشهرية التفصيلية</li>
+            </ul>
+            <div class="actions"><a href="#" class="btn">التفاصيل</a></div>
+          </article>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="container">
+      <p class="muted">© 2025 forsafety — جميع الحقوق محفوظة</p>
+    </div>
+  </footer>
 </body>
 </html>
