--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="actions"><a href="#" class="btn">التفاصيل</a></div>
           </article>
           <article class="plan">
-            <header><h3>الباقة السنوية (شهرين مجاناً)  </h3></header>
+            <header><h3>الباقة السنوية  </h3></header>
             <div class="price">3000 دينار</div>
             <ul class="features">
               <li class="ok">مدة 12 شهر</li>
