--- a/index.html
+++ b/index.html
@@ -85,21 +85,23 @@
         <h2 class="section-title">باقات التقييم والفحص</h2>
         <div class="plans">
           <article class="plan">
-            <header><h3>باقة التقييم والفحص التجريبي</h3></header>
-            <div class="price">50 دينار</div>
+            <header><h3>الباقة التأسيسية</h3></header>
+            <div class="price">300 دينار</div>
             <ul class="features">
-              <li class="ok">زيارة واحدة فقط</li>
-              <li class="ok">3–2 مسحات ATP </li>
+              <li class="ok">مدة 3 أسابيع</li>
+              <li class="ok">2–3 زيارات أسبوعية</li>
+              <li class="ok">3–2 مسحات ATP أسبوعياً</li>
               <li class="ok">تقييم الممارسات والإجراءات</li>
+              <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
               <li class="no">التقارير الشهرية التفصيلية</li>
             </ul>
             <div class="actions"><a href="#" class="btn">التفاصيل</a></div>
           </article>
           <article class="plan">
-            <header><h3>باقة التدقيق المثالي</h3></header>
-            <div class="price">300 دينار</div>
+            <header><h3>الباقة النصف السنوية</h3></header>
+            <div class="price">1500 دينار</div>
             <ul class="features">
-              <li class="ok">مدة 3 أشهر</li>
+              <li class="ok">مدة 6 أشهر</li>
               <li class="ok">2–3 زيارات أسبوعية</li>
               <li class="ok">3–2 مسحات ATP أسبوعياً</li>
               <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
@@ -108,7 +110,7 @@
             <div class="actions"><a href="#" class="btn">التفاصيل</a></div>
           </article>
           <article class="plan">
-            <header><h3>الباقة السنوية  </h3></header>
+            <header><h3>الباقة السنوية</h3></header>
             <div class="price">3000 دينار</div>
             <ul class="features">
               <li class="ok">مدة 12 شهر</li>
