--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="plans">
           <article class="plan">
             <header><h3>الباقة التأسيسية</h3></header>
-            <div class="price">300 دينار</div>
+            <div class="price">50 دينار</div>
             <ul class="features">
               <li class="ok">مدة 3 أسابيع</li>
               <li class="ok">2–3 زيارات أسبوعية</li>
@@ -95,19 +95,19 @@
               <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
               <li class="no">التقارير الشهرية التفصيلية</li>
             </ul>
-            <div class="actions"><a href="#" class="btn">التفاصيل</a></div>
+            <div class="actions"><a href="details.html" class="btn">التفاصيل</a></div>
           </article>
           <article class="plan">
             <header><h3>الباقة النصف السنوية</h3></header>
-            <div class="price">1500 دينار</div>
+            <div class="price">900 دينار</div>
             <ul class="features">
-              <li class="ok">مدة 6 أشهر</li>
+              <li class="ok">مدة 3 أشهر</li>
               <li class="ok">2–3 زيارات أسبوعية</li>
               <li class="ok">3–2 مسحات ATP أسبوعياً</li>
               <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
               <li class="ok">التقارير الشهرية التفصيلية</li>
             </ul>
-            <div class="actions"><a href="#" class="btn">التفاصيل</a></div>
+            <div class="actions"><a href="details.html" class="btn">التفاصيل</a></div>
           </article>
           <article class="plan">
             <header><h3>الباقة السنوية</h3></header>
@@ -119,7 +119,7 @@
               <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
               <li class="ok">التقارير الشهرية التفصيلية</li>
             </ul>
-            <div class="actions"><a href="#" class="btn">التفاصيل</a></div>
+            <div class="actions"><a href="details.html" class="btn">التفاصيل</a></div>
           </article>
         </div>
       </div>
