--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>forsafety — خدمات فحص وتقييم السلامة الغذائية</title>
+  <title>forsafety — خدمات متابعة الإلتزام بمعايير السلامة الغذائية</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
