--- a/index.html
+++ b/index.html
@@ -88,17 +88,16 @@
             <header><h3>الباقة التأسيسية</h3></header>
             <div class="price">50 دينار</div>
             <ul class="features">
-              <li class="ok">مدة 3 أسابيع</li>
+              <li class="ok">زيارة واحدة فقط</li>
               <li class="ok">2–3 زيارات أسبوعية</li>
               <li class="ok">3–2 مسحات ATP أسبوعياً</li>
               <li class="ok">تقييم الممارسات والإجراءات</li>
-              <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
               <li class="no">التقارير الشهرية التفصيلية</li>
             </ul>
             <div class="actions"><a href="details.html" class="btn">التفاصيل</a></div>
           </article>
           <article class="plan">
-            <header><h3>الباقة النصف السنوية</h3></header>
+            <header><h3>الباقة الربع سنوية</h3></header>
             <div class="price">900 دينار</div>
             <ul class="features">
               <li class="ok">مدة 3 أشهر</li>
