--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <header class="hero">
     <div class="container hero-inner">
       <div class="logo">forsafety</div>
-      <h1>خدمات فحص وتقييم السلامة الغذائية</h1>
-      <p>نقدّم خدمات متخصصة في تقييم جودة وسلامة المطاعم والمنشآت الغذائية وفق أفضل الممارسات والمعايير، لضمان تقديم منتجات آمنة ورفيعة الجودة للعملاء.</p>
+      <h1>خدمات متابعة الإلتزام بمعايير السلامة الغذائية</h1>
+      <p>نقدّم خدمات متخصصة في قياس مدى الالتزام بجودة وسلامة الاغذية في المطاعم والكافيهات والمنشآت الغذائية وفق أفضل الممارسات والمعايير، لضمان تقديم منتجات آمنة ورفيعة الجودة للعملاء.</p>
     </div>
   </header>
   <main>
@@ -75,8 +75,8 @@
         <div class="goals">
           <div class="goal">رفع مستوى الثقة بين منشأتك وعملائك</div>
           <div class="goal">تحسين السمعة وتعزيز التنافسية في السوق</div>
-          <div class="goal">تجنّب المخالفات والالتزام بالإشرافات الرقابية</div>
-          <div class="goal">كشف الأخطاء وتطوير الأداء قبل حدوث أي مشاكل</div>
+          <div class="goal">تجنّب التجاوزات والالتزام بالمعايير الرقابية</div>
+          <div class="goal">كشف الأخطاء وتطوير الأداء قبل حدوث اي مشكلة</div>
         </div>
       </div>
     </section>
