--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
     <section>
       <div class="container">
-        <h2 class="section-title">باقات التقييم والفحص</h2>
+        <h2 class="section-title">باقات المتابعة</h2>
         <div class="plans">
           <article class="plan">
             <header><h3>الباقة التأسيسية</h3></header>
