Update image sources in details.html

--- a/details.html
+++ b/details.html
@@ -69,7 +69,7 @@
         <li>نضع حدود قبول/رفض متفق عليها ونصدر توصيات فورية</li>
       </ul>
       <figure>
-        <img src="images/atp.jpg" alt="مسحة ATP على سطح عمل">
+        <img src="atp.png" alt="مسحة ATP ">
         <figcaption>مثال على قياس ATP لسطح تحضير — استبدل الصورة بـ <code>images/atp.jpg</code>.</figcaption>
       </figure>
     </section>
@@ -84,7 +84,7 @@
         <li>تحسين إجراءات الاستلام والتخزين والتحضير</li>
       </ul>
       <figure>
-        <img src="images/checklist.jpg" alt="قائمة تحقق سلامة غذائية">
+        <img src="practices.png" alt="قائمة تحقق سلامة غذائية">
         <figcaption>قائمة تحقق للممارسات الحرجة — ضع صورتك في <code>images/checklist.jpg</code>.</figcaption>
       </figure>
     </section>
