Add styles for images in details.html

--- a/details.html
+++ b/details.html
@@ -32,6 +32,15 @@
     .badge{display:inline-block;background:var(--accent-2);color:var(--accent);padding:4px 10px;border-radius:999px;font-size:13px;margin-left:6px}
     footer{padding:28px 0;text-align:center;background:#fff;border-top:1px solid #eceff3;margin-top:28px}
     @media (max-width:520px){.topbar{flex-direction:column;gap:10px}}
+    figure img {
+  width: 60%;
+  max-width: 450px;
+  height: auto;
+  border-radius: 12px;
+  border: 1px solid #eef2f6;
+  display: block;
+  margin: 0 auto;
+}
   </style>
 </head>
 <body>
