Update plan titles and features in index.html

--- a/index.html
+++ b/index.html
@@ -85,38 +85,38 @@
         <h2 class="section-title">باقات المتابعة</h2>
         <div class="plans">
           <article class="plan">
-            <header><h3>الباقة التأسيسية</h3></header>
+            <header><h3>باقة الفحص التجريبي</h3></header>
             <div class="price">50 دينار</div>
             <ul class="features">
               <li class="ok">زيارة واحدة فقط</li>
               <li class="ok">2–3 زيارات أسبوعية</li>
-              <li class="ok">3–2 مسحات ATP أسبوعياً</li>
-              <li class="ok">تقييم الممارسات والإجراءات</li>
-              <li class="no">التقارير الشهرية التفصيلية</li>
+              <li class="ok">2–3 مسحات ATP أسبوعياً</li>
+              <li class="ok">متابعة الممارسات والإجراءات</li>
+              <li class="no">تقارير شهرية تفصيلية</li>
             </ul>
             <div class="actions"><a href="details.html" class="btn">التفاصيل</a></div>
           </article>
           <article class="plan">
-            <header><h3>الباقة الربع سنوية</h3></header>
+            <header><h3>باقة التدقيق المثالي</h3></header>
             <div class="price">900 دينار</div>
             <ul class="features">
               <li class="ok">مدة 3 أشهر</li>
               <li class="ok">2–3 زيارات أسبوعية</li>
-              <li class="ok">3–2 مسحات ATP أسبوعياً</li>
+              <li class="ok">2–3 مسحات ATP أسبوعياً</li>
               <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
-              <li class="ok">التقارير الشهرية التفصيلية</li>
+              <li class="ok">تقارير شهرية تفصيلية</li>
             </ul>
             <div class="actions"><a href="details.html" class="btn">التفاصيل</a></div>
           </article>
           <article class="plan">
-            <header><h3>الباقة السنوية</h3></header>
+            <header><h3>الباقة الذهبية للسلامة الغذائية</h3></header>
             <div class="price">3000 دينار</div>
             <ul class="features">
               <li class="ok">مدة 12 شهر</li>
               <li class="ok">2–3 زيارات أسبوعية</li>
-              <li class="ok">3–2 مسحات ATP أسبوعياً</li>
+              <li class="ok">2–3 مسحات ATP أسبوعياً</li>
               <li class="ok">التقارير الأسبوعية بصيغة PDF</li>
-              <li class="ok">التقارير الشهرية التفصيلية</li>
+              <li class="ok">تقارير شهرية تفصيلية</li>
             </ul>
             <div class="actions"><a href="details.html" class="btn">التفاصيل</a></div>
           </article>
