--- a/details.html
+++ b/details.html
@@ -61,7 +61,7 @@
       <div class="grid">
         <a href="#atp">مسحات ATP <span class="badge">اختبار نظافة سطحي</span></a>
         <a href="#practices">تقييم الممارسات والإجراءات</a>
-        <a href="#visits">عدد الزيارات الأسبوعية</a>
+        <a href="#dates">متابعة دورية لتواريخ الصلاحية</a>
         <a href="#weekly-pdf">التقارير الأسبوعية (PDF)</a>
         <a href="#monthly-report">التقرير الشهري التفصيلي</a>
         <a href="#storage-waste">تقليل هدر الطعام بسبب التخزين</a>
@@ -71,7 +71,7 @@
     <!-- مسحات ATP -->
     <section class="card sec" id="atp">
       <h2>مسحات ATP</h2>
-      <p>مسحة ATP تقيس بقايا المواد العضوية على الأسطح (مثل الطاولات وأدراج التحضير) خلال ثوانٍ عبر قراءة رقمية (RLU). القراءة المنخفضة تعني نظافة أعلى.</p>
+      <p>مسحة ATP تقيس بقايا المواد العضوية على الأسطح (مثل مقابض الثلاجات، الطاولات، السكاكين وألواح التقطيع) خلال ثوانٍ عبر قراءة رقمية (RLU). القراءة المنخفضة تعني نظافة أعلى.</p>
       <ul>
         <li>نُحدّد نقاط حرجة (أكثر أماكن اللمس)</li>
         <li>نأخذ قراءات قبل وبعد التنظيف</li>
@@ -91,17 +91,18 @@
         <li>تحسين إجراءات الاستلام والتخزين والتحضير</li>
       </ul>
       <figure>
-        <img src="practices.png" alt="قائمة تحقق سلامة غذائية">
+        style="display:flex; gap:10px; justify-content:center;">
+  <img src="practices.png" alt="تقييم الممارسات" style="width:45%; border-radius:10px;">
+  <img src="Practices1.png" alt="تقييم الممارسات" style="width:45%; border-radius:10px;">
       </figure>
     </section>
 
     <!-- الزيارات -->
     <section class="card sec" id="visits">
-      <h2>عدد الزيارات الأسبوعية</h2>
-      <p>حسب الباقة المختارة، تتم زيارتك <strong>2–3 مرات أسبوعيًا</strong> للمتابعة السريعة وإغلاق الملاحظات قبل تفاقمها.</p>
+      <h2>متابعة دورية لتواريخ الصلاحية</h2>
+      <p>جرد عشوائي دوري للمنتجات للتحقق من تواريخ الصلاحية. الهدف هو عدم وجود منتجات منتهية الصلاحية يتم استهلاكها تعرض المستهلك او المنشأة للخطر. هذا الإجراء يحسن الرقابةة الداخلية ويظهر جدية الإلتزام بمعايير السلامة الغذائية</p>
       <figure>
-        <img src="images/visit.jpg" alt="زيارة تفتيش دورية للموقع">
-        <figcaption>صورة توضيحية لزيارة تفتيش — ضعها باسم <code>images/visit.jpg</code>.</figcaption>
+        <img src="dates.png" alt="زيارة تفتيش دورية للموقع">
       </figure>
     </section>
 
