Update image sources for weekly and monthly reports

--- a/details.html
+++ b/details.html
@@ -111,8 +111,7 @@
       <h2>التقارير الأسبوعية (PDF)</h2>
       <p>تلخيص دقيق لكل زيارة مع قراءات ATP وتوصيات قابلة للتنفيذ، يُرسل بصيغة PDF ويُحفظ كسجل يمكن الرجوع إليه.</p>
       <figure>
-        <img src="images/weekly_report.jpg" alt="نموذج تقرير أسبوعي">
-        <figcaption>نموذج تقرير أسبوعي — استبدل بـ <code>images/weekly_report.jpg</code>.</figcaption>
+        <img src="pdf.png" alt="نموذج تقرير أسبوعي">
       </figure>
     </section>
 
@@ -121,7 +120,7 @@
       <h2>التقرير الشهري التفصيلي</h2>
       <p>تحليل تجميعي للزيارات، مقارنة قراءات الأسابيع، ورسم منحنى التحسن، مع أولويات واضحة للعمل للأسبوع التالي.</p>
       <figure>
-        <img src="images/monthly_report.jpg" alt="تقرير شهري تفصيلي">
+        <img src="monthly_report.png" alt="تقرير شهري تفصيلي">
         <figcaption>تقرير شهري تفصيلي — ضع صورتك في <code>images/monthly_report.jpg</code>.</figcaption>
       </figure>
     </section>
@@ -131,7 +130,7 @@
       <h2>تقليل هدر الطعام بسبب التخزين</h2>
       <p>تتبّع درجات حرارة التبريد/التجميد، التهوية، ترتيب FIFO، وإرشادات العمر التخزيني (Shelf Life) لخفض التلف والهدر.</p>
       <figure>
-        <img src="images/storage.jpg" alt="ترتيب وتخزين المواد الغذائية">
+        <img src="storage.png" alt="ترتيب وتخزين المواد الغذائية">
         <figcaption>تحسين التخزين لتقليل الهدر — الصورة في <code>images/storage.jpg</code>.</figcaption>
       </figure>
     </section>
